# subtype-containers

./: CHANGELOG.md  README.md  cabal.project  hie.yaml  subtype-containers.cabal
example/: Digits.hs  Example.hs  example.cabal
src/Newtype/: IntMap.hs  IntSet.hs  Intersection.hs  Map.hs  Set.hs  Union.hs  Utils.hs
src/Newtype/IntMap/: Internal.hs
src/Newtype/IntSet/: Internal.hs
src/Newtype/Map/: Internal.hs
src/Newtype/Set/: Internal.hs
