cabal-version:       2.2
name:                subtype-containers
version:             0.1.0.0
synopsis:            Data structure wrappers to restrict them
                     to contain only a \"subset\" of elements.
-- description:
bug-reports:         https://github.com/viercc/subtype-containers/issue
license:             BSD-3-Clause
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  Readme.md, CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Newtype.Map,
    Newtype.Map.Internal,
    Newtype.Set,
    Newtype.Set.Internal,
    Newtype.IntMap,
    Newtype.IntMap.Internal,
    Newtype.IntSet,
    Newtype.IntSet.Internal
  build-depends:       base >=4.11 && <4.17,
                       containers,
                       coercible-subtypes >= 0.2.0.0
  default-language:    Haskell2010
  ghc-options: -Wall
